# kovio-py

./: .env.example  .gitignore  CHANGELOG.md  CHOICES.md  LICENSE  README.md  campaigns.json  pyproject.toml
creatives/: brand.html  coffee.html  dinner.html  kovio_brand.html
deploy/: JETSON_BRINGUP.md  README.md  install_robot.sh  kovio-agent-jetson.service  kovio-agent.service  kovio.env.example
examples/tier1_dropin/: main.py
examples/tier1_with_astra/: main.py
examples/tier1_with_selector/: main.py
scripts/: setup_astra_pi.sh  test_astra.py
src/kovio/: __init__.py  agent.py  cli.py  cloud.py  config.py  default_creative.html  platform.py  session_stream.py  types.py
src/kovio/adapters/: __init__.py  asr.py  audience.py  audio.py  browser_screen_page.py  detectors.py  gestures.py  lidar.py  mic.py  mock_perception.py  orbbec_perception.py  perception.py  realsense_perception.py  rich_perception.py  screen.py  tracker.py
src/kovio/campaigns/: __init__.py  models.py  selector.py  store.py
src/kovio/dashboard/: __init__.py  server.py
src/kovio/dashboard/static/: index.html
tests/: conftest.py  test_audience.py  test_audio.py  test_detectors.py  test_gaze.py  test_gestures.py  test_lidar.py  test_tracker.py
