[project]
name = "kovio"
version = "0.0.6"
description = "Advertising SDK for robots with screens."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Kovio", email = "hello@kovio.dev" }]
requires-python = ">=3.10"
# Core has ZERO runtime deps — the SDK installs and runs anywhere. Heavyweight
# hardware libs are opt-in via the extras below (pi, jetson, dev, dashboard).
dependencies = []
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://kovio.dev"
Repository = "https://github.com/kovio-labs/kovio"

[project.scripts]
kovio = "kovio.cli:main"

[project.optional-dependencies]
# Local dashboard server
dashboard = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
]

# Development on a laptop (no camera, no hardware)
dev = [
  "kovio[dashboard]",
  "pytest>=7.4.0",
  "build",
  "twine",
  "ruff",
  # `kovio demo` renders a scannable save-QR on the browser screen. Pure-Python
  # (the SVG factory needs no Pillow); the demo degrades to a placeholder without it.
  "qrcode>=7.4",
]

# Raspberry Pi 5 + Orbbec Astra (OpenNI 2 backend)
pi = [
  "kovio[dashboard]",
  "openni>=2.3; platform_machine=='aarch64'",
  "numpy>=1.24.0",
  # Note: Orbbec SDK is installed system-wide on Pi; the python binding pulls from there.
]

# NVIDIA Jetson Orin Nano Super + Intel RealSense D455
jetson = [
  "kovio[dashboard]",
  "pyrealsense2>=2.55.0",
  "onnxruntime>=1.18.0",  # CPU/GPU-agnostic ONNX runtime
  "opencv-python-headless>=4.8.0",
  "numpy>=1.24.0",
]

# All hardware adapters — useful for cross-compiling tests
all = [
  "kovio[pi]",
  "kovio[jetson]",
  "kovio[dev]",
]

# Deprecated alias for [pi] — kept for backwards compatibility with 0.0.5.
astra = ["kovio[pi]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kovio"]

[tool.hatch.build.targets.wheel.force-include]
"src/kovio/default_creative.html" = "kovio/default_creative.html"
"src/kovio/dashboard/static/index.html" = "kovio/dashboard/static/index.html"
